Reglement v2 + ajout des nouveaux reglements

--- a/index.html
+++ b/index.html
@@ -20,26 +20,27 @@
     </header>
     
     <main>
-
         <div class="Nav">
             <a class="actuel" href="index.html"><i class="fa-solid fa-house"></i>Accueil</a>
-            <hr>
-            <a href="pages/reglement-discord.html"><i class="fa-solid fa-ticket"></i>Régles Discord</a>
-            <a href="https://discord.gg/UWPqUsd73v"><i class="fa-brands fa-discord"></i>Discord</a>
-            <hr>
             <a href="pages/lore.html"><i class="fa-solid fa-book"></i>Lore du Serveur</a>
-            <a href="pages/respect-lore.html"><i class="fa-solid fa-shield-halved"></i>Respect du Lore</a>
-            <hr>
-            <a href="pages/regles-rp.html"><i class="fa-solid fa-pen-nib"></i>Règles Générales RP</a>
-            <a href="pages/regles-me.html"><i class="fa-solid fa-eye"></i>Règles /me</a>
-            <a href="pages/poudlard.html"><i class="fa-solid fa-hat-wizard"></i>Règlement Poudlard</a>
+            <a href="https://discord.gg/UWPqUsd73v"><i class="fa-brands fa-discord"></i>Rejoindre le Discord</a>        
             <hr>
             <a href="pages/jeu-de-role.html"><i class="fa-solid fa-masks-theater"></i>Le Jeu de Role</a>
             <a href="pages/lexique-rp.html"><i class="fa-solid fa-tag"></i>Lexique RP</a>
             <hr>
-            <a href="pages/magies-sorts-dons.html"><i class="fa-solid fa-wand-sparkles"></i>Magies, Sorts et Dons</a>
-            <a href="pages/sorts-coma.html"><i class="fa-solid fa-book-skull"></i>Règles Sorts Et Comas</a>
-            <a href="pages/groupes.html"><i class="fa-solid fa-people-group"></i>Groupes Et Interactions</a>
+            <a href="pages/regles-generales.html"><i class="fa-solid fa-pen-nib"></i>Règles Générales</a>
+            <a href="pages/respect-lore.html"><i class="fa-solid fa-shield-halved"></i>Respect du Lore</a>
+            <a href="pages/regles-discord.html"><i class="fa-solid fa-ticket"></i>Régles Discord</a>
+            <hr>
+            <a href="pages/regles-me.html"><i class="fa-solid fa-eye"></i>Règles /me</a>
+            <a href="pages/regles-coma.html"><i class="fa-solid fa-book-skull"></i>Règles Coma</a>
+            <a href="pages/regles-trames.html"><i class="fa-solid fa-address-book"></i>Règles Trames</a>
+            <a href="pages/groupes-interactions.html"><i class="fa-solid fa-people-group"></i>Groupes & Interactions</a>
+            <hr>
+            <a href="pages/regles-poudlard.html"><i class="fa-brands fa-fort-awesome"></i>Règles Poudlard</a>
+            <a href="pages/regles-professeurs.html"><i class="fa-solid fa-hat-wizard"></i>Règles Professeurs</a>
+            <a href="pages/regles-medicomages.html"><i class="fa-solid fa-user-doctor"></i>Règles Médicomages</a>
+            <a href="pages/magies-sorts-dons.html"><i class="fa-solid fa-wand-sparkles"></i>Magies, Sorts & Dons</a>
             <hr>
             <a href="pages/twitch.html"><i class="fa-solid fa-video"></i>Règlement Streamers</a>
         </div>
@@ -51,7 +52,7 @@
 
         <div class="contenu-main">
             <div class="image-container">
-                <img src="img/banniere-principale.webp" alt="img-principale"/>
+                <img src="img/img-principale.webp" alt="img-principale"/>
             </div>
 
             <div class="txt-main">
