--- a/pages/lexique-rp.html
+++ b/pages/lexique-rp.html
@@ -22,23 +22,25 @@
 
         <div class="Nav">
             <a href="../index.html"><i class="fa-solid fa-house"></i>Accueil</a>
-            <hr>
-            <a href="reglement-discord.html"><i class="fa-solid fa-ticket"></i>Régles Discord</a>
-            <a href="https://discord.gg/UWPqUsd73v"><i class="fa-brands fa-discord"></i>Discord</a>
-            <hr>
             <a href="lore.html"><i class="fa-solid fa-book"></i>Lore du Serveur</a>
-            <a href="respect-lore.html"><i class="fa-solid fa-shield-halved"></i>Respect du Lore</a>
-            <hr>
-            <a href="regles-rp.html"><i class="fa-solid fa-pen-nib"></i>Règles Générales RP</a>
-            <a href="regles-me.html"><i class="fa-solid fa-eye"></i>Règles /me</a>
-            <a href="poudlard.html"><i class="fa-solid fa-hat-wizard"></i>Règlement Poudlard</a>
+            <a href="https://discord.gg/UWPqUsd73v"><i class="fa-brands fa-discord"></i>Rejoindre le Discord</a>        
             <hr>
             <a href="jeu-de-role.html"><i class="fa-solid fa-masks-theater"></i>Le Jeu de Role</a>
             <a class="actuel" href="lexique-rp.html"><i class="fa-solid fa-tag"></i>Lexique RP</a>
             <hr>
-            <a href="magies-sorts-dons.html"><i class="fa-solid fa-wand-sparkles"></i>Magies, Sorts et Dons</a>
-            <a href="sorts-coma.html"><i class="fa-solid fa-book-skull"></i>Règles Sorts Et Comas</a>
-            <a href="groupes.html"><i class="fa-solid fa-people-group"></i>Groupes Et Interactions</a>
+            <a href="regles-generales.html"><i class="fa-solid fa-pen-nib"></i>Règles Générales</a>
+            <a href="respect-lore.html"><i class="fa-solid fa-shield-halved"></i>Respect du Lore</a>
+            <a href="regles-discord.html"><i class="fa-solid fa-ticket"></i>Régles Discord</a>
+            <hr>
+            <a href="regles-me.html"><i class="fa-solid fa-eye"></i>Règles /me</a>
+            <a href="regles-coma.html"><i class="fa-solid fa-book-skull"></i>Règles Coma</a>
+            <a href="regles-trames.html"><i class="fa-solid fa-address-book"></i>Règles Trames</a>
+            <a href="groupes-interactions.html"><i class="fa-solid fa-people-group"></i>Groupes & Interactions</a>
+            <hr>
+            <a href="regles-poudlard.html"><i class="fa-brands fa-fort-awesome"></i>Règles Poudlard</a>
+            <a href="regles-professeurs.html"><i class="fa-solid fa-hat-wizard"></i>Règles Professeurs</a>
+            <a href="regles-medicomages.html"><i class="fa-solid fa-user-doctor"></i>Règles Médicomages</a>
+            <a href="magies-sorts-dons.html"><i class="fa-solid fa-wand-sparkles"></i>Magies, Sorts & Dons</a>
             <hr>
             <a href="twitch.html"><i class="fa-solid fa-video"></i>Règlement Streamers</a>
         </div>
@@ -49,7 +51,7 @@
         </button>
 
         <div class="contenu-main">
-            <img class="img-principale" src="../img/lexique.webp" alt="img-principale"/>
+            <img class="img-principale" src="../img/lexique-rp.webp" alt="img-principale"/>
             
             <div class="txt-main">
                 <div class="txt-ST">Power Gaming</div>Réaliser des actions impossibles dans la vie réelle.
