--- a/pages/regles-me.html
+++ b/pages/regles-me.html
@@ -22,23 +22,25 @@
 
         <div class="Nav">
             <a href="../index.html"><i class="fa-solid fa-house"></i>Accueil</a>
-            <hr>
-            <a href="reglement-discord.html"><i class="fa-solid fa-ticket"></i>Régles Discord</a>
-            <a href="https://discord.gg/UWPqUsd73v"><i class="fa-brands fa-discord"></i>Discord</a>
-            <hr>
             <a href="lore.html"><i class="fa-solid fa-book"></i>Lore du Serveur</a>
-            <a href="respect-lore.html"><i class="fa-solid fa-shield-halved"></i>Respect du Lore</a>
-            <hr>
-            <a href="regles-rp.html"><i class="fa-solid fa-pen-nib"></i>Règles Générales RP</a>
-            <a class="actuel" href="regles-me.html"><i class="fa-solid fa-eye"></i>Règles /me</a>
-            <a href="poudlard.html"><i class="fa-solid fa-hat-wizard"></i>Règlement Poudlard</a>
+            <a href="https://discord.gg/UWPqUsd73v"><i class="fa-brands fa-discord"></i>Rejoindre le Discord</a>        
             <hr>
             <a href="jeu-de-role.html"><i class="fa-solid fa-masks-theater"></i>Le Jeu de Role</a>
             <a href="lexique-rp.html"><i class="fa-solid fa-tag"></i>Lexique RP</a>
             <hr>
-            <a href="magies-sorts-dons.html"><i class="fa-solid fa-wand-sparkles"></i>Magies, Sorts et Dons</a>
-            <a href="sorts-coma.html"><i class="fa-solid fa-book-skull"></i>Règles Sorts Et Comas</a>
-            <a href="groupes.html"><i class="fa-solid fa-people-group"></i>Groupes Et Interactions</a>
+            <a href="regles-generales.html"><i class="fa-solid fa-pen-nib"></i>Règles Générales</a>
+            <a href="respect-lore.html"><i class="fa-solid fa-shield-halved"></i>Respect du Lore</a>
+            <a href="regles-discord.html"><i class="fa-solid fa-ticket"></i>Régles Discord</a>
+            <hr>
+            <a class="actuel" href="regles-me.html"><i class="fa-solid fa-eye"></i>Règles /me</a>
+            <a href="regles-coma.html"><i class="fa-solid fa-book-skull"></i>Règles Coma</a>
+            <a href="regles-trames.html"><i class="fa-solid fa-address-book"></i>Règles Trames</a>
+            <a href="groupes-interactions.html"><i class="fa-solid fa-people-group"></i>Groupes & Interactions</a>
+            <hr>
+            <a href="regles-poudlard.html"><i class="fa-brands fa-fort-awesome"></i>Règles Poudlard</a>
+            <a href="regles-professeurs.html"><i class="fa-solid fa-hat-wizard"></i>Règles Professeurs</a>
+            <a href="regles-medicomages.html"><i class="fa-solid fa-user-doctor"></i>Règles Médicomages</a>
+            <a href="magies-sorts-dons.html"><i class="fa-solid fa-wand-sparkles"></i>Magies, Sorts & Dons</a>
             <hr>
             <a href="twitch.html"><i class="fa-solid fa-video"></i>Règlement Streamers</a>
         </div>
@@ -49,32 +51,25 @@
         </button>
 
         <div class="contenu-main">
-            <img class="img-principale" src="../img/uti-me.webp" alt="img-principale"/>
+            <img class="img-principale" src="../img/regles-me.webp" alt="img-principale"/>
                 
             <div class="txt-main">
-                <div class="txt-ST">Ce qui n'est pas autorisé.</div>
-                Les actions de type /me pense, /me se dit que, ou toute autre action décrivant des pensées internes ou sentiments non visibles ne sont pas valides en rôleplay. En effet, les autres joueurs ne peuvent ni voir ni entendre ce qui se passe dans la tête de votre personnage. Le rôleplay repose sur l’interaction visible et perceptible entre personnages.
-                
-                <div class="txt-ST">Exemples d’actions non valides.</div>
+
+                Le rôle du /me est de décrire des actions visibles, perceptibles par les autres personnages.
+
+                <div class="txt-ST">Ce qui est interdit :</div>Les pensées internes ou sentiments invisibles ne doivent pas être exprimés en /me, car les autres joueurs ne peuvent ni les voir ni y réagir, comme :
                 <ul>
-                    <li>/me pense que ce prof est incompétent</li>
+                    <li>/me pense que ce professeur est incompétent</li>
                     <li>/me se dit qu’il va bientôt se venger</li>
                     <li>/me ressent une grande tristesse intérieure</li>
-                    <li>/me regarde le professeur qui est sorti du tableau avec insistances.</li>
                 </ul>
-
-                <div class="txt-ST">Ce qui est autorisé. </div>
-                Les actions visibles, exprimées par des gestes, des expressions faciales ou des paroles. Cela permet aux autres joueurs de réagir de manière réaliste.
-
-                <div class="txt-ST">Exemples d’actions valides.</div> 
+                <div class="txt-ST">Ce qui est autorisé :</div>Les actions que les autres personnages peuvent voir, entendre ou percevoir, comme :
                 <ul>
-                    <li>/me lève les yeux au ciel</li>
+                    <li>/me fronce les sourcils en observant le professeur</li>
                     <li>/me serre les poings discrètement</li>
-                    <li>/me fixe intensément le professeur sans dire un mot</li>
+                    <li>/me brosse lentement son chat</li>
                 </ul>
-                Ces actions laissent deviner l’état d’esprit de votre personnage, sans révéler directement ses pensées.
-
-                <span clas="imp">Merci de faire attention !</span>
+                L’objectif est que le /me enrichisse l’interaction RP en donnant aux autres joueurs des éléments visibles pour réagir de manière réaliste.
             </div>
         </div>
     </main>
