--- a/pages/respect-lore.html
+++ b/pages/respect-lore.html
@@ -26,10 +26,8 @@
             <a href="lore.html"><i class="fa-solid fa-book"></i>Lore du Serveur</a>
             <a href="https://discord.gg/UWPqUsd73v"><i class="fa-brands fa-discord"></i>Rejoindre le Discord</a>        
             <hr>
-            <a href="jeu-de-role.html"><i class="fa-solid fa-masks-theater"></i>Le Jeu de Role</a>
-            <a href="lexique-rp.html"><i class="fa-solid fa-tag"></i>Lexique RP</a>
-            <hr>
             <a href="regles-generales.html"><i class="fa-solid fa-pen-nib"></i>Règles Générales</a>
+            <a href="lexique-rp.html"><i class="fa-solid fa-tag"></i>Lexique RP</a>
             <a class="actuel" href="respect-lore.html"><i class="fa-solid fa-shield-halved"></i>Respect du Lore</a>
             <a href="regles-discord.html"><i class="fa-solid fa-ticket"></i>Régles Discord</a>
             <hr>
@@ -63,7 +61,7 @@
 
                 <ul>
                     <li>Un élève reste un élève, un professeur reste un professeur. Les comportements doivent rester cohérents avec leur rôle.</li>
-                    <li>Les expressions modernes issues de notre monde (“wesh”, “mdr TikTok”, etc.) sont interdites. ( les réseaux sociaux sont bien sûr possible pour les née moldu habitant du côté moldu tout comme la télé, rester cohérent ).</li>
+                    <li>Les expressions modernes issues de notre monde (“wesh”, “mdr Youtube”, etc.) sont interdites. ( les réseaux sociaux sont bien sûr possible pour les née moldu habitant du côté moldu tout comme la télé, rester cohérent ).</li>
                     <li>Les insultes gratuites, comportements excessifs ou bagarres sans raison n’ont pas leur place.</li>
                     <li>À Poudlard, les élèves parlent et agissent comme dans le monde magique, pas comme dans un quartier londonien actuel.</li>
                 </ul>
