--- a/pages/twitch.html
+++ b/pages/twitch.html
@@ -20,28 +20,7 @@
     
     <main>
 
-        <div class="Nav">
-            <a href="../index.html"><i class="fa-solid fa-house"></i>Accueil</a>
-            <a href="lore.html"><i class="fa-solid fa-book"></i>Lore du Serveur</a>
-            <a href="https://discord.gg/UWPqUsd73v"><i class="fa-brands fa-discord"></i>Rejoindre le Discord</a>        
-            <hr>
-            <a href="regles-generales.html"><i class="fa-solid fa-pen-nib"></i>Règles Générales</a>
-            <a href="lexique-rp.html"><i class="fa-solid fa-tag"></i>Lexique RP</a>
-            <a href="respect-lore.html"><i class="fa-solid fa-shield-halved"></i>Respect du Lore</a>
-            <a href="regles-discord.html"><i class="fa-solid fa-ticket"></i>Régles Discord</a>
-            <hr>
-            <a href="regles-me.html"><i class="fa-solid fa-eye"></i>Règles /me</a>
-            <a href="regles-coma.html"><i class="fa-solid fa-book-skull"></i>Règles Coma</a>
-            <a href="regles-trames.html"><i class="fa-solid fa-address-book"></i>Règles Trames</a>
-            <a href="groupes-interactions.html"><i class="fa-solid fa-people-group"></i>Groupes & Interactions</a>
-            <hr>
-            <a href="regles-poudlard.html"><i class="fa-brands fa-fort-awesome"></i>Règles Poudlard</a>
-            <a href="regles-professeurs.html"><i class="fa-solid fa-hat-wizard"></i>Règles Professeurs</a>
-            <a href="regles-medicomages.html"><i class="fa-solid fa-user-doctor"></i>Règles Médicomages</a>
-            <a href="magies-sorts-dons.html"><i class="fa-solid fa-wand-sparkles"></i>Magies, Sorts & Dons</a>
-            <hr>
-            <a class="actuel" href="twitch.html"><i class="fa-solid fa-video"></i>Règlement Streamers</a>
-        </div>
+        <div id="navbar"></div>
 
         <button class="hamburger">
           <i class="fas fa-bars menuIcon"></i>
